--- a/poem.html
+++ b/poem.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Soul selects her own Society - Emily Dickinson</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
