--- a/index.html
+++ b/index.html
@@ -7,10 +7,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+        <div class="hero-banner">
+            <img
+                src="https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_1200,c_limit/v1760026545/bird-flying-over-water_eaixax.jpg"
+                srcset="
+                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_480,c_limit/v1760026545/bird-flying-over-water_eaixax.jpg 480w,
+                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_800,c_limit/v1760026545/bird-flying-over-water_eaixax.jpg 800w,
+                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_1200,c_limit/v1760026545/bird-flying-over-water_eaixax.jpg 1200w,
+                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_1600,c_limit/v1760026545/bird-flying-over-water_eaixax.jpg 1600w
+                "
+                sizes="(max-width: 600px) 100vw, (max-width: 1024px) 90vw, 1200px"
+                alt="Bird flying over water hero banner"
+                class="hero-img"
+            >
+        </div>
+   
+
     <header>
         <h1>The Soul selects her own Society</h1>
         <h2>Emily Dickinson</h2>
     </header>
+
 
     <main> 
         <section>
