--- a/index.html
+++ b/index.html
@@ -7,20 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-        <div class="hero-banner">
-            <img
-                src="https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_1200,c_limit/v1760026545/bird-flying-over-water_eaixax.jpg"
-                srcset="
-                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_480,c_limit/v1760026545/bird-flying-over-water_eaixax.jpg 480w,
-                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_800,c_limit/v1760026545/bird-flying-over-water_eaixax.jpg 800w,
-                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_1200,c_limit/v1760026545/bird-flying-over-water_eaixax.jpg 1200w,
-                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_1600,c_limit/v1760026545/bird-flying-over-water_eaixax.jpg 1600w
-                "
-                sizes="(max-width: 600px) 100vw, (max-width: 1024px) 90vw, 1200px"
-                alt="Bird flying over water hero banner"
-                class="hero-img"
-            >
-        </div>
    
 
     <header>
@@ -28,27 +14,43 @@
         <h2>Emily Dickinson</h2>
     </header>
 
+            <div class="thumbnail-wrapper">
+                <img
+                    src="https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_400,c_limit/v1760026538/woman-pondering-window_wxo3zq.jpg"
+                    srcset="
+                        https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_200,c_limit/v1760026538/woman-pondering-window_wxo3zq.jpg 200w,
+                        https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_400,c_limit/v1760026538/woman-pondering-window_wxo3zq.jpg 400w,
+                        https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_600,c_limit/v1760026538/woman-pondering-window_wxo3zq.jpg 600w,
+                        https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_800,c_limit/v1760026538/woman-pondering-window_wxo3zq.jpg 800w
+                    "
+                    sizes="(max-width: 600px) 50vw, (max-width: 1024px) 30vw, 200px"
+                    alt="Woman pondering by a window"
+                    class="thumbnail-img"
+                    loading="lazy"
+                >
+            </div>
+
 
     <main> 
         <section>
           <br>
             <h3>The Soul selects her own Society</h3>
-            <blockquote>
-                <p>The Soul selects her own Society —</p>
-                <p>Then — shuts the Door —</p>
-                <p>To her divine Majority —</p>
-                <p>Present no more —</p>
+                                    <blockquote>
+                                            <p>The Soul selects her own Society —</p>
+                                            <p>Then — shuts the Door —</p>
+                                            <p>To her divine Majority —</p>
+                                            <p>Present no more —</p>
                 
-                <p>Unmoved — she notes the Chariots — pausing —</p>
-                <p>At her low Gate —</p>
-                <p>Unmoved — an Emperor be kneeling</p>
-                <p>Upon her Mat —</p>
+                                            <p>Unmoved — she notes the Chariots — pausing —</p>
+                                            <p>At her low Gate —</p>
+                                            <p>Unmoved — an Emperor be kneeling</p>
+                                            <p>Upon her Mat —</p>
                 
-                <p>I've known her from an ample nation —</p>
-                <p>Choose One —</p>
-                <p>Then — close the Valves of her attention —</p>
-                <p>Like Stone —</p>
-            </blockquote>
+                                            <p>I've known her from an ample nation —</p>
+                                            <p>Choose One —</p>
+                                            <p>Then — close the Valves of her attention —</p>
+                                            <p>Like Stone —</p>
+                                    </blockquote>
         </section>
     </main>
 
