Removed background image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_800,c_limit/v1760026538/woman-pondering-window_wxo3zq.jpg 800w
                     "
                     sizes="(max-width: 600px) 50vw, (max-width: 1024px) 30vw, 200px"
-                    alt="Woman pondering by a window"
+                    alt="Woman sitting next to a window, looking outside thoughtfully"
                     class="thumbnail-img"
                     loading="lazy"
                 >
