--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+        <div class="hero-banner">
+            <img
+                src="https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_1200,c_limit/v1760026544/tree-alone-water_kotco2.jpg"
+                srcset="
+                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_480,c_limit/v1760026544/tree-alone-water_kotco2.jpg 480w,
+                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_800,c_limit/v1760026544/tree-alone-water_kotco2.jpg 800w,
+                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_1200,c_limit/v1760026544/tree-alone-water_kotco2.jpg 1200w,
+                    https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_1600,c_limit/v1760026544/tree-alone-water_kotco2.jpg 1600w
+                "
+                sizes="(max-width: 600px) 100vw, (max-width: 1024px) 90vw, 1200px"
+                alt="Lone tree by the water at sunrise"
+                class="hero-img"
+                loading="eager"
+            >
+        </div>
    
 
     <header>
