--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     https://res.cloudinary.com/dqxqiuycr/image/upload/f_auto,q_auto,w_1600,c_limit/v1760026544/tree-alone-water_kotco2.jpg 1600w
                 "
                 sizes="(max-width: 600px) 100vw, (max-width: 1024px) 90vw, 1200px"
-                alt="Lone tree by the water at sunrise"
+                alt="Tree in distance across a body of light green water surrounded by fog"
                 class="hero-img"
                 loading="eager"
             >
