--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Soul selects her own Society - Emily Dickinson</title>
+    <link rel="preload"
+      href="/fonts/NotoSansMono-VariableFont_wdth,wght.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin>
+
+    <link rel="preload"
+      href="/fonts/nanummyeongjo-regular-webfont.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin>
     <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
 
