Added hover effect, class for footer.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </main>
 
     <footer>
-        <p>© 2025 Emily Lubonty</p>
+        <p class="footer-text">© 2025 Emily Lubonty</p>
     </footer>
 </body>
 </html>
