Added div classes

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <br>
             <h3>The Soul selects her own Society</h3>
                                     <blockquote>
+                                            <div class="poem-body">
                                             <p>The Soul selects her own Society —</p>
                                             <p>Then — shuts the Door —</p>
                                             <p>To her divine Majority —</p>
@@ -78,12 +79,15 @@
                                             <p>Choose One —</p>
                                             <p>Then — close the Valves of her attention —</p>
                                             <p>Like Stone —</p>
+                                            </div>
                                     </blockquote>
         </section>
     </main>
 
     <footer>
-        <p class="footer-text">© 2025 Emily Lubonty</p>
+        <div class="footer-text">
+            © 2025 Emily Lubonty
+        </div>
     </footer>
 </body>
 </html>
